src/test/ui/issues/issue-10536.stderr
error: expected one of `.`, `::`, `;`, `?`, `{`, `}`, or an operator, found `!`
  --> $DIR/issue-10536.rs:14:17
   |
LL |     assert!({one! two()});
   |                 ^ expected one of 7 possible tokens here

error: expected one of `.`, `::`, `;`, `?`, `{`, `}`, or an operator, found `!`
  --> $DIR/issue-10536.rs:18:17
   |
LL |     assert!({one! two});
   |                 ^ expected one of 7 possible tokens here

error: aborting due to 2 previous errors

